--- a/resourcemonitor/build.gradle
+++ b/resourcemonitor/build.gradle
@@ -1,20 +1,35 @@
 apply plugin: 'java'
+apply plugin: 'maven'
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-}
-
-sourceCompatibility = "7"
-targetCompatibility = "7"
 buildscript {
     repositories {
         mavenCentral()
     }
-//    dependencies {
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
-//    }
 }
+def group = 'com.student0.www' // 会按照group生成.m2下的目录路径
+def version = '1.0.0-release' // 指定版本
+def artifactId='resourcemonitor'
+sourceCompatibility = 1.8
+// 上传Task，Gradle会生成并上传pom.xml文件。
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            pom.groupId = group
+            pom.artifactId = artifactId
+            pom.version = version
+            repository(url: uri('../repo'))
+
+            //构造项目的Pom文件
+            pom.project {
+                name = project.name
+                packaging = 'jar'
+                description = 'description'
+            }
+        }
+
+    }
+}
+
 repositories {
     jcenter()
     google()
