--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:name=".CustomApplication"
+        android:name=".UselessApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
