--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,14 @@ android {
     }
 }
 
-resourceMonitor {
-    className "com.student0.www.ResourceMonitor"
-}
 
 repositories {
     jcenter()
     google()
     mavenCentral()
+    maven {
+        url uri('../repo')
+    }
 }
 
 buildscript {
@@ -59,4 +59,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.student0.www:monitor:1.0.0'
 }
