--- a/monitor/build.gradle
+++ b/monitor/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.student0.www'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -35,24 +36,24 @@ def version = '1.0.0' // 指定版本
 def artifactId='monitor'
 sourceCompatibility = 1.8
 // 上传Task，Gradle会生成并上传pom.xml文件。
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            pom.groupId = group
-            pom.artifactId = artifactId
-            pom.version = version
-            repository(url: uri('../repo'))
-
-            //构造项目的Pom文件
-            pom.project {
-                name = project.name
-                packaging = 'jar'
-                description = 'description'
-            }
-        }
-
-    }
-}
+//uploadArchives {
+//    repositories {
+//        mavenDeployer {
+//            pom.groupId = group
+//            pom.artifactId = artifactId
+//            pom.version = version
+//            repository(url: uri('../repo'))
+//
+//            //构造项目的Pom文件
+//            pom.project {
+//                name = project.name
+//                packaging = 'jar'
+//                description = 'description'
+//            }
+//        }
+//
+//    }
+//}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
