--- a/resourcemonitor/build.gradle
+++ b/resourcemonitor/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'java'
 //apply plugin: 'maven'
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 group='com.student0.www'
 
 buildscript {
